# RunService

./: .replit  COMPREHENSIVE_ANALYSIS.md  FIXES_IMPLEMENTED.md  README-External-Access.md  README.md  api.py  api_fixed.py  app.py  app_manager.py  celery_worker.py  cloud_integration.py  complete_system.sh  config.py  deployment-guide.md  deployment-instructions.md  fixed_vnc_server.py  flask_app.py  install.sh  install_deps.sh  main.py  manage-vnc.sh  models.py  multi_vnc_manager.py  oneclick_replit_adapter.py  performance.py  persistent_vnc.py  pyproject.toml  real_vnc_server.py  replit.md  routes.py  run_oneclick.sh  run_web_interface.py  services_manager.py  setup.sh  simple-vnc-demo.html  simple_multi_vnc.py  simple_vnc_server.py  start-desktop.sh  start-fixed.sh  start-native.sh  (+25 more)
attached_assets/: Dockerfile_1754749932087.txt  start_1754749922495.sh
config/: lxde-autostart  vnc-passwd
docker/: Dockerfile  entrypoint.sh
noVNC/: demo-page.html  diagnosis.html  index.html  oneclick-demo.html  system-status.html  ubuntu-desktop.html
old_project/: admin.py  deployment-guide.md  models.py  quick-setup.sh  redis_manager.py  security.py  vnc_final_working.py  vnc_manager.py  vnc_replit_solution.py  vnc_status.py  web_interface.py
old_project/docker/: docker-compose.yml  nginx.conf
old_project/templates/: index.html  navigation.html
templates/: analytics.html  applications.html  base.html  dashboard.html  download.html  external-access.html  index.html  logs.html  settings.html  vnc_viewer.html
