[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.42",
    "werkzeug>=3.1.3",
    "psutil>=7.0.0",
    "eventlet>=0.40.2",
    "celery>=5.5.3",
    "boto3>=1.40.6",
    "redis>=6.4.0",
    "flask-socketio>=5.5.1",
]
